# tonnet-mobile

./: .gitignore  LICENSE  README.md  capacitor.config.ts  findings.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: build-release.yml  ci.yml
android/app/: build.gradle  proguard-rules.pro
android/app/libs/: .gitkeep
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  tonproxy_jni.c
scripts/: README.md  build-go-libs.sh  env.sh  setup-android-sdk.sh
src/: App.tsx  main.tsx  vite-env.d.ts
src/components/mobile/: BookmarksSheet.tsx  BottomSheet.tsx  MobileHeader.tsx  OperaNavBar.tsx  TabsSheet.tsx  TelegramTabBar.tsx  index.ts
src/components/pages/: BrowserPage.tsx  LandingPage.tsx  SettingsPage.tsx  StartPage.tsx
src/components/ui/: button.tsx  input.tsx
src/hooks/: index.ts  useIsMobile.ts  useProxy.ts
src/i18n/: index.ts
src/i18n/locales/de/: browser.json  common.json  landing.json  settings.json
src/i18n/locales/en/: browser.json  common.json  landing.json  settings.json
src/i18n/locales/es/: browser.json  common.json  landing.json  settings.json
src/i18n/locales/fr/: browser.json  common.json  landing.json  settings.json
src/i18n/locales/hi/: browser.json  common.json  landing.json  settings.json
src/i18n/locales/it/: browser.json  common.json  landing.json  settings.json
src/i18n/locales/ja/: browser.json  common.json  landing.json  settings.json
src/i18n/locales/ko/: browser.json  common.json  landing.json  (+1 more)
src/lib/: url.ts  utils.ts
src/lib/__tests__/: url.test.ts
src/platform/: index.ts  types.ts
src/plugins/: index.ts  ton-proxy.ts
src/shared/: constants.ts  types.ts
src/stores/: bookmarks.ts  preferences.ts  proxy.ts  settings.ts
src/stores/__tests__/: bookmarks.test.ts  preferences.test.ts  settings.test.ts
src/styles/: globals.css  index.css  mobile.css
src/test/: setup.ts
(+38 files in other folders)
